Revert hotfix